Design Improvements Made

--- a/Cata-Teo.html
+++ b/Cata-Teo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head><link rel="stylesheet" type="text/css" href="Cata-Teo.css">
+
   <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,23 +9,31 @@
       <title>Catalina T. Ionescu</title>
 
       <!-- Bootstrap -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <script src="jquery-3.1.1.min.js"></script>
+      <script src="Cata-Teo.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
 </head>
 <title>Catalina T. Ionescu </title>
 <body>
-</body>
-<div id='header'>
-  <p>Cătă.</p>
+<!-- <img id ="background" src = "wallpaper2.jpeg"</img> -->
+<div id="header">
+  <p id = "name">Cătă.</p>
 </div>
-<div id ="first">
-  <p>My First Web Page</p>
+<div class="hello" id ="first" onclick="start()">
+  <!-- <img src = "https://storage.googleapis.com/is-now-illegal.appspot.com/gifs/MESSY%20CODE.gif"</img> -->
+  <div id = "text" >
+  <p> Hello </p>
+  <p> there !</p>
+  </div>
 </div>
-<div id ="second">
+<!-- <div id ="second">
   <p>My First Web Page</p>
 </div>
 <div id = "third">
   <p>My First Web Page</p>
-</div>
+</div> -->
+</body>
 
 </html>
