Navigation bar added and edited

--- a/Cata-Teo.html
+++ b/Cata-Teo.html
@@ -18,12 +18,25 @@
 <title>Catalina T. Ionescu </title>
 <body>
 <!-- <img id ="background" src = "wallpaper2.jpeg"</img> -->
-<div id="header">
-  <p id = "name">Cătă.</p>
+<div class = "header" id="header">
+  <nav class="navbar navbar-default ">
+      <div class = "container-fluid ">
+        <div class = "active">
+          <p class="navbar-text navbar-left" id = "name">Cătă.</p>
+          <ul class="nav nav-tabs navbar-right">
+            <li id="about"><a href="about.html">About</a></li>
+            <li id = "home"><a href="Cata-Teo.html">Home</a></li>
+            <li id = "contact"><a href="Contact.html">Contact</a></li>
+
+          </ul>
+        </div>
+      </div>
+      </div>
+</nav>
 </div>
-<div class="hello" id ="first" onclick="start()">
+<div class = "hello" id ="first" onclick="start()">
   <!-- <img src = "https://storage.googleapis.com/is-now-illegal.appspot.com/gifs/MESSY%20CODE.gif"</img> -->
-  <div id = "text" >
+  <div  id = "text" >
   <p> Hello </p>
   <p> there !</p>
   </div>
