Personal web-site updates. Server information backed - up

--- a/Cata-Teo.html
+++ b/Cata-Teo.html
@@ -24,8 +24,9 @@
         <div class = "active">
           <p class="navbar-text navbar-left" id = "name">Cătă.</p>
           <ul class="nav nav-tabs navbar-right">
-            <li id="about"><a href="about.html">About</a></li>
             <li id = "home"><a href="Cata-Teo.html">Home</a></li>
+            <li id="about"><a href="about.html">About</a></li>
+            <li id = "Artsy"><a href="Artsy.html">Home</a></li>
             <li id = "contact"><a href="Contact.html">Contact</a></li>
 
           </ul>
@@ -34,12 +35,16 @@
       </div>
 </nav>
 </div>
-<div class = "hello" id ="first" onclick="start()">
+<!-- <div class = "hello" id ="first" onclick="start()"> -->
+<div class = "hello" id ="first">
+  <img src = "Me.jpg" class = "img-rounded"></img>
   <!-- <img src = "https://storage.googleapis.com/is-now-illegal.appspot.com/gifs/MESSY%20CODE.gif"</img> -->
-  <div  id = "text" >
-  <p> Hello </p>
-  <p> there !</p>
-  </div>
+  <h1 id = "text"> Welcome! </h1>
+    <blockquote class = "blockquote-reverse">
+    <p id = "quote">If you can dream it, you can do it!</p>
+    <footer id = "cite"> Walt Disney</footer>
+    </blockquote>
+
 </div>
 <!-- <div id ="second">
   <p>My First Web Page</p>
